tests/NormalTests/paczka1/fuzzy1/30002549.err
Error in line 7: A327 S417 97,5
Error in line 32: WRmWBqK S417 94,>
Error in line 29: iWjS6F9k9PN S417 35,5
